<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="12dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:background="@color/yellow" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:src="@drawable/ic_vector_star_main" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="#4D000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/imageCardView"
            app:layout_constraintTop_toBottomOf="@id/imageCardView" />

        <TextView
            android:id="@+id/price_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/prise_size"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageCardView"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="40dp"
            android:layout_height="18dp"
            android:layout_marginStart="2dp"
            android:gravity="center"
            android:text="@string/kgz"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/price_size"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="50dp"
            android:layout_height="18dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="#4D000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <TextView
            android:id="@+id/item_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="3dp"
            android:gravity="left"
            android:hint="@string/item"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/price"
            app:layout_constraintTop_toBottomOf="@id/price_size" />


        <TextView
            android:id="@+id/location_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/price_size"
            app:layout_constraintTop_toBottomOf="@id/item_title_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>