<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/imageView">

                <TextView
                    android:id="@+id/eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_eye"
                    android:drawablePadding="10dp"
                    android:text="550"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="просмотров"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/eye"
                    app:layout_constraintTop_toTopOf="@id/eye" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Дата обновления"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/eye" />

                <TextView
                    android:id="@+id/detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="10dp"
                    android:text="@string/city"
                    android:textColor="@android:color/holo_red_dark"
                    app:layout_constraintStart_toStartOf="@+id/eye"
                    app:layout_constraintTop_toBottomOf="@id/eye" />

                <TextView
                    android:id="@+id/update_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/date"
                    app:layout_constraintTop_toTopOf="@id/detail_location" />

                <TextView
                    android:id="@+id/call_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/call_btn"
                    android:drawableStart="@drawable/ic_call"
                    android:elevation="20dp"
                    android:padding="10dp"
                    android:shadowColor="@color/yellow"
                    android:text="@string/call"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toStartOf="@id/messages"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detail_location" />

                <TextView
                    android:id="@+id/messages"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/grey"
                    android:drawableStart="@drawable/ic_message"
                    android:elevation="20dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/write"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/call_btn"
                    app:layout_constraintTop_toBottomOf="@id/detail_location" />

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/free"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/detail_location"
                    app:layout_constraintTop_toBottomOf="@id/call_btn" />

                <TextView
                    android:id="@+id/amount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/prises"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/messages"
                    app:layout_constraintTop_toBottomOf="@id/messages" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="от"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/amount_tv"
                    app:layout_constraintEnd_toStartOf="@id/amount_tv"
                    app:layout_constraintTop_toTopOf="@id/amount_tv" />

                <TextView
                    android:id="@+id/currency_tv_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kgz"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/messages"
                    app:layout_constraintTop_toBottomOf="@id/amount_tv" />

                <TextView
                    android:id="@+id/items_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/шт"
                    app:layout_constraintEnd_toEndOf="@id/currency_tv_detail"
                    app:layout_constraintTop_toBottomOf="@id/currency_tv_detail" />

                <TextView
                    android:id="@+id/items_amount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/two"
                    app:layout_constraintEnd_toStartOf="@id/items_amount"
                    app:layout_constraintTop_toBottomOf="@id/currency_tv_detail" />

                <TextView
                    android:id="@+id/desc_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Продаю сухофрукты оптом"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/detail_location"
                    app:layout_constraintTop_toBottomOf="@id/items_amount" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>